--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Runjiu Chen"
-description              : "Runjiu is a ScM student in JHSP, interested in statistical modeling and computational approaches for genetic epidemiology, single-cell genomics, and multi-omics of diseases."
+description              : "Interested in statistical modeling and computational approaches for genetic epidemiology, single-cell genomics, and multi-omics of diseases."
 repository               : "Run9Chen.github.io"
 google_scholar_stats_use_cdn : true
 
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Runjiu Chen"
-  avatar           : "/Users/runjiuchen/Desktop/JHU R/ava.jpg"
+  avatar           : "ava.jpg"
   bio              : "Johns Hopkins University"
   location         : "Baltimore MD"
   employer         :
